--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -19,6 +19,7 @@ body {
         14. KERANJANG
         15. CHECKOUT
         16. FOOTER 
+        16. FOOTER test
 */
 
 /* -----------------------------------------------------------------------------
